--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             
             <ul class="nav justify-content-end text-white">
               <li class="nav-item">
-                <a class="nav-link text-white" href="#"> <button class="btn"> Team</button> </a>
+                <a class="nav-link text-white" href="#"> <button class="btn"> <b>Team</b></button> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#"><button class="btn"> Contact</button></a>
+                <a class="nav-link text-white" href="#"><button class="btn"> <b>Contact</b></button></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#"><button class="btn btn-warning"> Login</button></a>
